--- a/JPA-Basic/pom.xml
+++ b/JPA-Basic/pom.xml
@@ -6,6 +6,20 @@
     <groupId>jpa-basic</groupId>
     <artifactId>ex1-hello-jpa</artifactId>
     <version>1.0.0</version>
+<!--java11 에러 해결-->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <!-- JPA 하이버네이트 -->
         <dependency>
@@ -19,5 +33,16 @@
             <artifactId>h2</artifactId>
             <version>2.1.214</version>
         </dependency>
+
+        <!-- EntityManagerFactory 만들고 실행시 Caused by: java.lang.ClassNotFoundException: javax.xml.bind.JAXBException 해결용-->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
     </dependencies>
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 </project>
